--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,3 @@
-* {
-  font-family: "Roboto", sans-serif;
-  padding: 0;
-  margin: 0;
-}
-
 .ui.cards > .card > .image {
   height: 250px;
   padding: 20px;
@@ -43,7 +37,7 @@
 }
 
 .ui.grid.container {
-  margin-top: 3em;
+  margin-top: 45px;
 }
 
 .ui.grid > .row {
